--- a/src/index.jade
+++ b/src/index.jade
@@ -18,7 +18,7 @@ html
 
       section(data-bespoke-state="theme--ugh" data-bespoke-hash='ugh')
         h2 WEBSITES!!!
-        //- h4 ugh, websites can be a pain
+        h4 ugh
       
       section(data-bespoke-state="theme--me" data-bespoke-hash='me')
         h2 Ben
@@ -59,6 +59,10 @@ html
             |  /  
             a(href="http://anschultz.com/" target="_blank") Awesome
 
+          li It's responsive :
+            a(href="http://anschultz.com/" target="_blank") Ugh
+            |  /  
+            a(href="https://ben-shepard-6gm7.squarespace.com/" target="_blank") Awesome
       
       section(data-bespoke-state="theme--watermellon" data-bespoke-hash='tools')
         h2 What are the best DIY tools
@@ -82,7 +86,7 @@ html
             a(href="https://themeforest.net/category/wordpress" target="_blank") ThemeForest
             
 
-      section(data-bespoke-state="theme--watermellon" data-bespoke-hash='goodies')
+      section(data-bespoke-state="theme--mint" data-bespoke-hash='goodies')
         h2 Look Sharp!
         
         ul
@@ -113,8 +117,11 @@ html
           //- li Make a sitemap
           //-   a(href="https://www.xml-sitemaps.com/" target="_blank")
 
+      section(data-bespoke-state="theme--lookgood" data-bespoke-hash='look-good')
+        h2 Look Sharp!
 
-      section(data-bespoke-state="theme--watermellon" data-bespoke-hash='lies')
+
+      section(data-bespoke-state="theme--red" data-bespoke-hash='lies')
         h2 Popular misconceptions
         
         ul
@@ -122,30 +129,31 @@ html
           li More interactivity
           li Need lots of sections and columns
           li Leaving your site
-          li Social Media
           li Blogging
+          li SEO
 
 
-      section(data-bespoke-state="theme--watermellon" data-bespoke-hash='you')
-        h2 Popular misconceptions
+      section(data-bespoke-state="theme--yellow" data-bespoke-hash='you')
+        h2 QnA
         
         ul
-          li Too much scrolling
-          li More interactivity
-          li Need lots of sections and columns
-          li Leaving your site
-          li Social Media
-          li Blogging
+          li Q:  
+            a(href="#" target="_blank") A: 
 
-            
-      section(data-bespoke-state="theme--dark" data-bespoke-hash='help')
+          li Q:  
+            a(href="#" target="_blank") A: 
+    
+      section(data-bespoke-state="theme--watermellon" data-bespoke-hash='help')
         h2 If you need help...
         p 
           a(href="mailto:benjamin@solvm.com") E-mail me :)
 
         pre.language-bash
           code.
-            $ sudo thank --everyone  
+            $ echo "http:brownerd.com/ugh"
+            $ sudo thank --everyone
 
+      section(data-bespoke-state="theme--kind" data-bespoke-hash='kind')
+        h2 URAWSM
 
     script(src='build/build.js')
