--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -247,6 +247,29 @@ article
           color: colors.yellow
 
 
+      &--lookgood
+        background-image: url(https://media.giphy.com/media/LGr1RbE6sFiuY/giphy.gif)
+
+        background-size: cover
+
+        h2, h3, h4
+          color: colors.watermellon
+
+        p, li
+          color: colors.charcoal
+
+        a
+          color: colors.watermellon
+          font-weight: typeface.sans.weight.hairline
+
+
+      &--kind
+        background-image: url(https://media.giphy.com/media/NjjvZdmoVhgrK/giphy.gif)
+
+        background-size: cover
+
+        h2, h3, h4
+          color: colors.white
 
 
       &--white
@@ -263,8 +286,8 @@ article
           //font-weight: typeface.slab.weight.hairline
 
         a
-          //color: colors.brick
-          //font-weight: typeface.slab.weight.hairline
+          color: colors.watermellon
+          // font-weight: typeface.slab.weight.hairline
 
 
       &--watermellon
@@ -274,7 +297,7 @@ article
           color: colors.yellow
 
         p, li
-          color: colors.graphite
+          color: colors.white
 
         a
           color: colors.yellow
@@ -287,7 +310,7 @@ article
           color: colors.watermellon
 
         p, li
-          color: colors.graphite
+          color: colors.charcoal
 
       &--green
         background-color: colors.green
@@ -332,7 +355,7 @@ article
           color: colors.white
 
         p, li
-          color: colors.graphite
+          color: colors.yellow
 
       &--mint
         background-color: colors.mint
@@ -342,6 +365,11 @@ article
 
         p, li
           color: colors.charcoal
+
+        a
+          color: colors.watermellon
+          font-weight: typeface.sans.weight.hairline
+
 
 .bespoke-slide
   transition:
