--- a/src/index.jade
+++ b/src/index.jade
@@ -62,7 +62,7 @@ html
           li It's responsive :
             a(href="http://anschultz.com/" target="_blank") Ugh
             |  /  
-            a(href="https://ben-shepard-6gm7.squarespace.com/" target="_blank") Awesome
+            a(href="https://five-demo.squarespace.com/" target="_blank") Awesome
       
       section(data-bespoke-state="theme--watermellon" data-bespoke-hash='tools')
         h2 What are the best DIY tools
@@ -117,8 +117,8 @@ html
           //- li Make a sitemap
           //-   a(href="https://www.xml-sitemaps.com/" target="_blank")
 
-      section(data-bespoke-state="theme--lookgood" data-bespoke-hash='look-good')
-        h2 Look Sharp!
+      //- section(data-bespoke-state="theme--lookgood" data-bespoke-hash='look-good')
+      //-   h2 Look Sharp!
 
 
       section(data-bespoke-state="theme--red" data-bespoke-hash='lies')
