--- a/src/index.jade
+++ b/src/index.jade
@@ -47,10 +47,10 @@ html
             |  / 
             a(href="https://five-demo.squarespace.com/" target="_blank") Awesome 
       
-          li It's gets to the point : 
-            a(href="http://waulah.uipro.net/" target="_blank") Ugh
+          li The handshake test : 
+            a(href="http://waulah.uipro.net/" target="_blank") Too many at once
             |  /
-            a(href="http://cresudo.com/enoire/" target="_blank") Ugh
+            a(href="http://cresudo.com/enoire/" target="_blank") Info barf
             |  /  
             a(href="https://benjamin2720.wixsite.com/website-1") Awesome
 
