--- a/src/index.jade
+++ b/src/index.jade
@@ -39,7 +39,7 @@ html
         h3 What makes an
           br 
           i amazing 
-          |-website?
+          | website?
           
         ul
           li You can find the steering wheel : 
