--- a/src/index.jade
+++ b/src/index.jade
@@ -27,7 +27,7 @@ html
         ul
           li
           li ~13 years making webites
-          li Photographer / Artist / MSW Social Worker
+          li Photographer / Artist / Social Worker (MSW)
           li So, how did I get into web nerd stuff?
 
       
