--- a/src/index.jade
+++ b/src/index.jade
@@ -52,7 +52,7 @@ html
             |  /
             a(href="http://cresudo.com/enoire/" target="_blank") Info barf
             |  /  
-            a(href="https://benjamin2720.wixsite.com/website-1") Awesome
+            a(href="https://benjamin2720.wixsite.com/website-1"  target="_blank") Awesome
 
           li It fits your needs : 
             a(href="http://triada.just-themes.com/" target="_blank") Ugh
@@ -65,7 +65,7 @@ html
             a(href="https://five-demo.squarespace.com/" target="_blank") Awesome
       
       section(data-bespoke-state="theme--watermellon" data-bespoke-hash='tools')
-        h2 What are the best DIY tools
+        h2 DIY site builders
         
         ul
           li Squarespace : 
