--- a/src/index.jade
+++ b/src/index.jade
@@ -137,8 +137,8 @@ html
         h2 Q & A
         
         ul
-          li Q:  
-            a(href="#" target="_blank") A: 
+          li Q: Where can I find this presentation?
+            a(href="http:brownerd.com/ugh" target="_blank") A: http:brownerd.com/ugh
 
           li Q:  
             a(href="#" target="_blank") A: 
