--- a/src/index.jade
+++ b/src/index.jade
@@ -133,7 +133,7 @@ html
           li SEO
 
 
-      section(data-bespoke-state="theme--yellow" data-bespoke-hash='you')
+      section(data-bespoke-state="theme--qna" data-bespoke-hash='qna')
         h2 Q & A
         
         ul
