--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -271,6 +271,18 @@ article
         h2, h3, h4
           color: colors.white
 
+      &--qna
+        background-color: colors.yellow
+
+        h2, h3, h4
+          color: colors.watermellon
+
+        p, li
+          color: colors.charcoal
+
+        li a
+          display block
+
 
       &--white
         background-color: colors.white
