--- a/src/index.jade
+++ b/src/index.jade
@@ -138,7 +138,7 @@ html
         
         ul
           li Q: Where can I find this presentation?
-            a(href="http:brownerd.com/ugh" target="_blank") A: http:brownerd.com/ugh
+            a(href="http://brownerd.com/ugh" target="_blank") A: http://brownerd.com/ugh
 
           li Q:  
             a(href="#" target="_blank") A: 
@@ -150,7 +150,7 @@ html
 
         pre.language-bash
           code.
-            $ echo "http:brownerd.com/ugh"
+            $ echo "http://brownerd.com/ugh"
             $ sudo thank --everyone
 
       section(data-bespoke-state="theme--kind" data-bespoke-hash='kind')
