--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Webites!!! | ugh
+    title Websites!!! | ugh
 
     link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900,900italic,700italic,400italic,100italic')
     link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700')
@@ -71,7 +71,7 @@ html
           li Squarespace : 
             a(href="https://www.squarespace.com/" target="_blank") Site
             |  /  
-            a(href="https://github.com/css/csso" target="_blank") Templates
+            a(href="https://www.squarespace.com/templates" target="_blank") Templates
 
           li Wix : 
             a(href="https://www.wix.com" target="_blank") Site
@@ -112,7 +112,7 @@ html
             a(href="https://www.youtube.com/watch?v=r8wv_dbwB9E" target="_blank") Photoshop
 
           li What are they doing? : 
-            a(href="Google Analytics") Google Analytics
+            a(href="https://analytics.google.com/") Google Analytics
 
           //- li Make a sitemap
           //-   a(href="https://www.xml-sitemaps.com/" target="_blank")
