--- a/src/index.jade
+++ b/src/index.jade
@@ -78,12 +78,28 @@ html
             |  /  
             a(href="https://www.wix.com/website/templates" target="_blank") Templates
 
+          li Weebly :
+            a(href="http://www.weebly.com/") Site
+            |  /  
+            a(href="https://www.weebly.com/themes") Themes
+
+          li Other People's Pixels :
+            a(href="https://otherpeoplespixels.com/") Site
+
+          li Shopify :
+            a(href="https://www.shopify.com/") Site
+
+          li BigCartel :
+            a(href="https://www.bigcartel.com/") Site
+
           li WordPress : 
             a(href="https://wordpress.com/" target="_blank") Site
             |  /  
             a(href="https://wordpress.com/themes" target="_blank") Themes
             |  /  
             a(href="https://themeforest.net/category/wordpress" target="_blank") ThemeForest
+            |  /  
+            a(href="https://elementor.com/") Elementor
             
 
       section(data-bespoke-state="theme--mint" data-bespoke-hash='goodies')
@@ -140,8 +156,8 @@ html
           li Q: Where can I find this presentation?
             a(href="http://brownerd.com/ugh" target="_blank") A: http://brownerd.com/ugh
 
-          li Q:  
-            a(href="#" target="_blank") A: 
+          li Q: How do I get a domain name? 
+            a(href="http://godaddy.com" target="_blank") A: 
     
       section(data-bespoke-state="theme--watermellon" data-bespoke-hash='help')
         h2 If you need help...
