--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -218,7 +218,7 @@ article
 
         a
           color: colors.yellow
-          font-weight: typeface.sans.weight.hairline
+
 
 
       &--me
@@ -260,7 +260,7 @@ article
 
         a
           color: colors.watermellon
-          font-weight: typeface.sans.weight.hairline
+
 
 
       &--kind
@@ -291,10 +291,10 @@ article
           color: colors.charcoal
 
         h4
-          color: colors.graphite
+          color: colors.charcoal
 
         p, li
-          color: colors.graphite
+          color: colors.charcoal
           //font-weight: typeface.slab.weight.hairline
 
         a
@@ -313,7 +313,7 @@ article
 
         a
           color: colors.yellow
-          font-weight: typeface.sans.weight.hairline
+
 
       &--yellow
         background-color: colors.yellow
@@ -380,7 +380,7 @@ article
 
         a
           color: colors.watermellon
-          font-weight: typeface.sans.weight.hairline
+
 
 
 .bespoke-slide
