--- a/src/index.jade
+++ b/src/index.jade
@@ -65,34 +65,43 @@ html
             a(href="https://five-demo.squarespace.com/" target="_blank") Awesome
       
       section(data-bespoke-state="theme--watermellon" data-bespoke-hash='tools')
-        h2 DIY site builders
+        h2 DIY
         
         ul
-          li Squarespace : 
+          li Squarespace (all purpose) : 
             a(href="https://www.squarespace.com/" target="_blank") Site
             |  /  
             a(href="https://www.squarespace.com/templates" target="_blank") Templates
 
-          li Wix : 
+          li Wix (all purpose) : 
             a(href="https://www.wix.com" target="_blank") Site
             |  /  
             a(href="https://www.wix.com/website/templates" target="_blank") Templates
 
-          li Weebly : 
+          li Weebly (all purpose) : 
             a(href="http://www.weebly.com/") Site
             |  /  
             a(href="https://www.weebly.com/themes") Themes
 
-          li Other People's Pixels : 
+          li Other People's Pixels (artists) : 
             a(href="https://otherpeoplespixels.com/") Site
 
-          li Shopify : 
+          li Shopify (eCommerce) : 
             a(href="https://www.shopify.com/") Site
 
-          li BigCartel : 
+          li BigCartel (eCommerce) : 
             a(href="https://www.bigcartel.com/") Site
 
-          li WordPress : 
+          li Gumroad (digital products) : 
+            a(href="https://gumroad.com/") Site
+
+          li Leanpub (writers) : 
+            a(href="https://leanpub.com/") Site
+
+          li 500px (Photographers) : 
+            a(href="https://500px.com/") Site
+
+          li WordPress (all purpose) : 
             a(href="https://wordpress.com/" target="_blank") Site
             |  /  
             a(href="https://wordpress.com/themes" target="_blank") Themes
